[gd_scene load_steps=22 format=3 uid="uid://bkm2ck7caxv1d"]

[ext_resource type="Script" path="res://Script/Cam1Trigger.gd" id="1_7t4qv"]
[ext_resource type="Script" path="res://Script/Cam2Trigger.gd" id="1_bsdho"]
[ext_resource type="PackedScene" uid="uid://c7ir62xhq36u" path="res://Scenes/player.tscn" id="1_v5bi1"]
[ext_resource type="AudioStream" uid="uid://cf1n0v0r28rwx" path="res://Audio/Music/Contain.wav" id="2_0maek"]
[ext_resource type="Texture2D" uid="uid://cfvuvvkh2v5aa" path="res://Dark/texture_07.png" id="4_mljrf"]
[ext_resource type="Script" path="res://Script/Enemy.gd" id="4_ttwrt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1gqq0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
sky_energy_multiplier = 5.0
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_25vfs"]
sky_material = SubResource("ProceduralSkyMaterial_1gqq0")

[sub_resource type="Environment" id="Environment_bhnp8"]
background_mode = 2
sky = SubResource("Sky_25vfs")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_05s8w"]
size = Vector3(25.9227, 5.59772, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_60kl3"]
size = Vector3(25.6284, 6.45947, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xp6us"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4g7jj"]
albedo_color = Color(0.363902, 0, 0.0320666, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s5bke"]
material = SubResource("StandardMaterial3D_4g7jj")

[sub_resource type="SphereShape3D" id="SphereShape3D_t8g02"]
radius = 9.92049

[sub_resource type="SphereShape3D" id="SphereShape3D_dspny"]
radius = 1.71329

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_51g3f"]
points = PackedVector3Array(0, 1.59, 0, 7.5, 0, -6.2, -7.5, 0, -6.4, 0, 2, 0, 7.5, 2, -6.2, -7.5, 2, -6.4)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ig16t"]
points = PackedVector3Array(0, 1.59, 0, 7.5, 0, -6.2, -7.5, 0, -6.4, 0, 2, 0, 7.5, 2, -6.2, -7.5, 2, -6.4)

[sub_resource type="NavigationMesh" id="NavigationMesh_ewodp"]
vertices = PackedVector3Array(-1.06564, 1, 4.53214, 0.684361, 1, 4.53214, 0.684361, 1, -6.96786, -16.3156, 1, -6.96786, -16.3156, 1, 4.28214, 0.684361, 1, 4.53214, 13.4344, 1, 4.53214, 13.4344, 1, -6.96786, 0.684361, 1, -6.96786, -0.0656395, 1, 15.0321, 0.184361, 1, 6.78214, -1.56564, 1, 6.53214, -1.56564, 1, 4.78214, -1.06564, 1, 4.53214, -16.3156, 1, 4.28214, -1.56564, 1, 6.53214, -1.56564, 1, 4.78214, -16.3156, 1, 4.28214, -1.56564, 1, 6.53214, -16.3156, 1, 4.28214, -16.3156, 1, 15.0321, -0.0656395, 1, 15.0321, 13.4344, 1, 15.0321, 13.4344, 1, 6.78214, 0.184361, 1, 6.78214, -0.0656395, 1, 15.0321)
polygons = [PackedInt32Array(1, 0, 2), PackedInt32Array(2, 0, 4), PackedInt32Array(2, 4, 3), PackedInt32Array(8, 7, 5), PackedInt32Array(5, 7, 6), PackedInt32Array(9, 11, 10), PackedInt32Array(14, 13, 12), PackedInt32Array(17, 16, 15), PackedInt32Array(21, 20, 18), PackedInt32Array(18, 20, 19), PackedInt32Array(23, 22, 24), PackedInt32Array(24, 22, 25)]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_piro7"]
albedo_texture = ExtResource("4_mljrf")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_agvrf"]
albedo_texture = ExtResource("4_mljrf")
uv1_triplanar = true

[node name="Main" type="Node3D"]

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_bhnp8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28174, 11.0562)
shadow_enabled = true

[node name="Player" parent="." groups=["Player"] instance=ExtResource("1_v5bi1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.63662, 1.74537, -5.99384)

[node name="Cams" type="Node3D" parent="."]

[node name="Cam1" type="Camera3D" parent="Cams"]
transform = Transform3D(1, 0, 0, 0, 0.884711, 0.46614, 0, -0.46614, 0.884711, -0.013739, 6.5598, 1.89195)

[node name="Cam2" type="Camera3D" parent="Cams"]
transform = Transform3D(0.694643, 0.343852, -0.631852, -0.00458683, 0.880459, 0.4741, 0.71934, -0.326432, 0.613182, -13.4602, 5.5598, 22.4085)

[node name="CamTriggers" type="Node3D" parent="."]
transform = Transform3D(1.32512, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Cam1Trigger" type="Area3D" parent="CamTriggers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.36633, -2.3315)
script = ExtResource("1_7t4qv")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="CamTriggers/Cam1Trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.404968, 4.43002, 4.47387)
shape = SubResource("BoxShape3D_05s8w")

[node name="Cam2Trigger" type="Area3D" parent="CamTriggers"]
script = ExtResource("1_bsdho")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CamTriggers/Cam2Trigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.304443, 2.72974, 4.47387)
shape = SubResource("BoxShape3D_60kl3")

[node name="Rat" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999918, 0, 0.0128104, 0, 1, 0, -0.0128104, 0, 0.999918, 0, 1.44272, 17.8032)
script = ExtResource("4_ttwrt")
patrolspeed = 4
chasespeed = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rat"]
transform = Transform3D(0.962845, 0, 2.42144e-08, 0, 0.384235, 0, -4.65661e-09, 0, 1.62754, 0, -0.582412, 0)
shape = SubResource("CapsuleShape3D_xp6us")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Rat/CollisionShape3D"]
mesh = SubResource("CapsuleMesh_s5bke")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Rat/CollisionShape3D"]
transform = Transform3D(-0.00510767, 0, 0.99998, 0, 0.305312, 0, -0.826683, 0, -0.00617839, -0.0104747, 0.39753, -0.257444)
mesh = SubResource("CapsuleMesh_s5bke")
skeleton = NodePath("../..")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Rat"]

[node name="PatrolTimer" type="Timer" parent="Rat"]
wait_time = 2.5
one_shot = true

[node name="HearingFar" type="Area3D" parent="Rat"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rat/HearingFar"]
shape = SubResource("SphereShape3D_t8g02")

[node name="Hearingclose" type="Area3D" parent="Rat"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rat/Hearingclose"]
shape = SubResource("SphereShape3D_dspny")

[node name="SightClose" type="Area3D" parent="Rat"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rat/SightClose"]
transform = Transform3D(0.797566, 0, 2.79397e-09, 0, 1, 0, -1.86265e-09, 0, 0.781903, -0.154872, -1.35034, 0.279914)
shape = SubResource("ConvexPolygonShape3D_51g3f")

[node name="Sightfar" type="Area3D" parent="Rat"]
transform = Transform3D(0.640026, 0, 0, 0, 1, 0, -9.31323e-10, 0, 0.994882, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rat/Sightfar"]
transform = Transform3D(2.38592, 0, 9.31323e-09, 0, 1, 0, -1.49012e-08, 0, 1.34184, -0.154872, -1.35034, 0.279906)
shape = SubResource("ConvexPolygonShape3D_ig16t")

[node name="Head" type="Marker3D" parent="Rat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.60392, 0)

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0)
navigation_mesh = SubResource("NavigationMesh_ewodp")

[node name="Ground" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4184, 0, 3.97354)
use_collision = true
size = Vector3(30.6788, 1, 22.8828)
material = SubResource("StandardMaterial3D_piro7")

[node name="Wall" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.53536, 3.84459, 5.63626)
use_collision = true
size = Vector3(14.7524, 6.69055, 1)
material = SubResource("StandardMaterial3D_agvrf")

[node name="Beam" type="CSGBox3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.81889, 2.62501, 5.63626)
use_collision = true
size = Vector3(15.9935, 0.585014, 1)
material = SubResource("StandardMaterial3D_agvrf")

[node name="Marker3D" type="Marker3D" parent="NavigationRegion3D" groups=["EnemyWaypoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4548, 0.779513, 10.9965)

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D/Marker3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.400598, 0)

[node name="Marker3D2" type="Marker3D" parent="NavigationRegion3D" groups=["EnemyWaypoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.1931, 0.779513, 10.9965)

[node name="CSGBox3D" type="CSGBox3D" parent="NavigationRegion3D/Marker3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.400598, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0maek")
volume_db = -15.758
autoplay = true

[connection signal="body_entered" from="CamTriggers/Cam1Trigger" to="CamTriggers/Cam1Trigger" method="_on_body_entered"]
[connection signal="body_entered" from="CamTriggers/Cam2Trigger" to="CamTriggers/Cam2Trigger" method="_on_body_entered"]
[connection signal="timeout" from="Rat/PatrolTimer" to="Rat" method="_on_patrol_timer_timeout"]
[connection signal="body_entered" from="Rat/HearingFar" to="Rat" method="_on_hearing_far_body_entered"]
[connection signal="body_exited" from="Rat/HearingFar" to="Rat" method="_on_hearing_far_body_exited"]
[connection signal="body_entered" from="Rat/Hearingclose" to="Rat" method="_on_hearingclose_body_entered"]
[connection signal="body_exited" from="Rat/Hearingclose" to="Rat" method="_on_hearingclose_body_exited"]
[connection signal="body_entered" from="Rat/SightClose" to="Rat" method="_on_sight_close_body_entered"]
[connection signal="body_exited" from="Rat/SightClose" to="Rat" method="_on_sight_close_body_exited"]
[connection signal="body_entered" from="Rat/Sightfar" to="Rat" method="_on_sightfar_body_entered"]
[connection signal="body_exited" from="Rat/Sightfar" to="Rat" method="_on_sightfar_body_exited"]
